@@ -20,10 +20,17 @@
  * -----END-LICENCE-----
  */
 
+#include "config.h"
 #include <iostream>
 #include <string>
 #include <memory>
+
+#ifdef HAVE_GETOPT_H
 #include <getopt.h>
+#else // HAVE_GETOPT_H
+#include <stdlib.h>
+#endif // HAVE_GETOPT_H
+
 #include "om/om.h"
 #include "testsuite.h"
 #include "omrefcnt.h"
